ORCHSYM-530 Fix splash not fit in high resolution

--- a/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-ui/src/main/webapp/css/main.css
+++ b/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-ui/src/main/webapp/css/main.css
@@ -27,6 +27,7 @@ body {
     bottom: 0px;
     background: #03111F;
     background: transparent url(../images/splash.jpg) no-repeat center center;
+    background-size:100%;
     z-index: 2000;
 }
 
